# Redline_Arb

./: README.md
OneDrive/Desktop/ARBYS/: .vulture_whitelist.py  CHANGELOG.md  INSTALL_DESKTOP_WINDOWS.md  INSTALL_PWA.md  README.md  README_preview.html  RELEASE_NOTES_v1.0.0.md  VULTURE_ANALYSIS.md  env.example  main.py  noxfile.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  version.txt
OneDrive/Desktop/ARBYS/.github/workflows/: ci.yml
OneDrive/Desktop/ARBYS/backend/: README.md  api_server.py
OneDrive/Desktop/ARBYS/config/: settings.py
OneDrive/Desktop/ARBYS/examples/: scraper_usage_example.py
OneDrive/Desktop/ARBYS/gui/: account_dialog.py  account_manager_dialog.py  api_provider_dialog.py  main_window.py  setup_wizard.py  tachometer_widget.py  theme_utils.py  ui_firstday_slideshow.py
OneDrive/Desktop/ARBYS/mobile_web_app/: README.md  api_server.py  package.json
OneDrive/Desktop/ARBYS/mobile_web_app/scripts/: test-server.ts
OneDrive/Desktop/ARBYS/mobile_web_app/tests/: global-setup.ts  global-teardown.ts
OneDrive/Desktop/ARBYS/onboarding/: __init__.py  first_run_manager.py  splash_screen.py  tooltips.py  tutorial_overlay.py  welcome_dialog.py  wiring_example.py
OneDrive/Desktop/ARBYS/release_assets/: INSTALL_BACKEND_WINDOWS_X86.md  INSTALL_DESKTOP_WINDOWS_X86.md  RELEASE_NOTES_v1.2.1.md  SHA256SUMS_v1.2.0.txt  SHA256SUMS_v1.2.1.txt
OneDrive/Desktop/ARBYS/scripts/: backend_install.bat  build_macos.sh  build_windows.bat  configure_api_sports_runtime.py  configure_the_odds_api_runtime.py  create_macos_icon.sh  db_integrity_check.py  generate_checksums.sh  health_check.py  read_version.py  verify_api_sports.py
OneDrive/Desktop/ARBYS/src/: account_health.py  account_health_cache.py  account_manager.py  arbitrage.py  arbitrage_optimized.py  data_acquisition.py  data_orchestrator.py  data_orchestrator_async.py  data_orchestrator_enhanced.py  stake_calculator.py  utils.py
OneDrive/Desktop/ARBYS/src/api_providers/: __init__.py  api_sports.py  base.py  sofascore_scraper.py  sportradar.py  the_odds_api.py
OneDrive/Desktop/ARBYS/src/data_storage/: historical_data.py
OneDrive/Desktop/ARBYS/src/metadata_providers/: __init__.py  base.py  sports_open_data.py  thesportsdb.py
OneDrive/Desktop/ARBYS/src/models/: __init__.py  probability_model.py
OneDrive/Desktop/ARBYS/src/scrapers/: __init__.py  base_scraper.py  odds_portal_scraper.py
OneDrive/Desktop/ARBYS/src/signals/: __init__.py  injury_signal.py
OneDrive/Desktop/ARBYS/tests/: conftest.py  test_concurrency.py  test_integrity.py  test_performance.py  test_regression.py
OneDrive/Desktop/ARBYS/tests/gui/: __init__.py  test_dialogs_smoke.py  test_main_window_extended.py  test_main_window_smoke.py
OneDrive/Desktop/ARBYS/tests/integration/: __init__.py  test_api_providers.py  test_data_acquisition.py  test_data_orchestrator.py
OneDrive/Desktop/ARBYS/tests/perf/: __init__.py  test_arbitrage_perf.py  test_cache_perf.py  test_startup_bench.py
OneDrive/Desktop/ARBYS/tests/property/: test_stake_property.py
OneDrive/Desktop/ARBYS/tests/unit/: __init__.py  test_account_health.py  test_account_manager.py  test_arbitrage.py  test_providers_sportradar.py  test_providers_the_odds_api.py  test_stake_calculator.py  test_utils.py
OneDrive/Desktop/ARBYS/tests/utils/: orchestrator_stub.py  providers.py
OneDrive/Desktop/glsl/: .editorconfig  .gitattributes  .gitignore  AUTONOMOUS_VJ_ROADMAP_v1.txt  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  build.rs  buildlog.txt  chroma_gpu.py  flake.nix  output.txt  rustfmt.toml
OneDrive/Desktop/glsl/.github/workflows/: release.yml  test.yml
OneDrive/Desktop/glsl/examples/: 0.toml  1.toml  10.toml  11.toml  12.toml  13.toml  14.toml  15.toml  16.toml  17.toml  18.toml  19.toml  2.toml  3.toml  4.toml  5.toml  6.toml  7.toml  8.toml  9.toml  custom_shader.wgsl
OneDrive/Desktop/glsl/notes/: ARCHITECTURE.md  AUDIO_SETUP.md  CONFIG_SAVE_LOAD.md  CONTROLS.md  PALETTES.md  PARAMETERS.md  USAGE.md
OneDrive/Desktop/glsl/packaging/arch/: PKGBUILD  REUSE.toml
OneDrive/Desktop/glsl/packaging/homebrew/: chroma.rb
OneDrive/Desktop/glsl/packaging/scoop/: chroma.json
OneDrive/Desktop/glsl/src/: cli.rs  constants.rs  lib.rs  main.rs
OneDrive/Desktop/glsl/src/app/: audio.rs  autonomous_app.rs  chroma_app.rs  config_watcher.rs  futuristic_status_bar.rs  input.rs  mod.rs  rendering.rs  startup.rs  status_bar.rs  styling_constants.rs  vj_integration.rs
OneDrive/Desktop/glsl/src/ascii/: converter.rs  mod.rs  palette.rs
OneDrive/Desktop/glsl/src/audio/: analyzer.rs  capture.rs  device_selector.rs  mod.rs
OneDrive/Desktop/glsl/src/params/: color_mode.rs  mod.rs  palette_type.rs  pattern_type.rs  shader_params.rs
OneDrive/Desktop/glsl/src/render/: mod.rs  (+1 more)
OneDrive/Desktop/glsl/tests/: ascii_converter_edge_cases_test.rs  ascii_palette_comprehensive_test.rs  constants_validation_test.rs  enum_navigation_test.rs  framebuffer_comprehensive_test.rs  integration_test.rs  params_adjustment_test.rs  render_test.rs  shader_params_test.rs  shader_uniforms_comprehensive_test.rs
(+295 files in other folders)
